HookResponse is an array
