# ldap-sync/docs/swagger.json
@@ -34,7 +34,7 @@
         },
         "/hook": {
             "post": {
-                "description": "Transforms LDAP entries and derives searches",
+                "description": "Transform LDAP entries and generate derived searches + dependencies",
                 "consumes": [
                     "application/json"
                 ],
@@ -44,8 +44,8 @@
                 "summary": "Process LDAP hook",
                 "parameters": [
                     {
-                        "description": "Hook request",
-                        "name": "body",
+                        "description": "Hook payload",
+                        "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -57,7 +57,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.HookResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.HookResponse"
+                            }
                         }
                     }
                 }
@@ -417,14 +420,16 @@
         },
         "main.HookRequest": {
             "type": "object",
+            "required": [
+                "content",
+                "dn"
+            ],
             "properties": {
                 "content": {
-                    "description": "Attributes of the entry\nrequired: true",
                     "type": "object",
                     "additionalProperties": true
                 },
                 "dn": {
-                    "description": "Distinguished Name of the LDAP entry\nrequired: true",
                     "type": "string"
                 }
             }
